--- a/.minecraft/config/buildcraft/main.conf
+++ b/.minecraft/config/buildcraft/main.conf
@@ -1,5 +1,5 @@
 # Configuration file
-# Generated on 13-1-24 下午1:53
+# Generated on 13-1-24 下午1:55
 
 ####################
 # block
@@ -33,10 +33,10 @@ block {
 
 
 ####################
-# """"block savers""""
+# """""""block savers"""""""
 ####################
 
-"""""block savers""""" {
+""""""""block savers"""""""" {
     B:hopper.disabled=false
 }
 
@@ -84,7 +84,7 @@ general {
     # Set to false to turn off energy loss over distance on all power pipes
     B:power.usePipeLoss=true
     B:trackNetworkUsage=false
-    version=3.3.0
+    B:version=3.3.0
 }
 
 
