--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 #/.minecraft/lib
 /.minecraft/magic
 /.minecraft/mods/World*
-#/.minecraft/config
+/.minecraft/config
 /.minecraft/LiteLoader.*
 /.minecraft/ModLoader.*
 /.minecraft/crash-reports
