update to B4 minecraft 1.5 update forge modloader etc. update lwjgl to 2.8.5 update texturepack move font to texturepack remove some unsuppest mod add some shaderpacks
Signed-off-by: pa001024 <pa001024@qq.com>

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,11 @@
 /.minecraft/LiteLoader.*
 /.minecraft/mods/macros
 /.minecraft/journeyMap
+/.minecraft/audiotori
+/.minecraft/matmos
 /Launcher.json
 *.1
+*.2
 *.log
 *.lck
 *.7z
@@ -30,3 +33,4 @@ glslshadersof.updatecheck.txt
 Launcher.ini
 /pack.bat
 /run.bat
+debug.*
