update B6 / add auto update
Signed-off-by: pa001024 <pa001024@qq.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /.minecraft/texturepacks-mp-cache
 /.minecraft/resources
 /.minecraft/saves
-#/.minecraft/lib
+/.minecraft/lib
 /.minecraft/magic
 /.minecraft/mods/World*
 /.minecraft/config
